# prayer-times-plasmoid

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  CompassGraphicsWidget.cpp  CompassGraphicsWidget.h  Doxyfile  Messages.sh  QiblaGraphicsWidget.cpp  QiblaGraphicsWidget.h  README  README.md  TODO  compass.svgz  compassgraphicswidget.cpp  compassgraphicswidget.h  compasswidget.cpp  compasswidget.h  plasma-applet-prayertimes.desktop  plasma-applet-prayertimes.notifyrc  prayerdelegate.cpp  prayerdelegate.h  prayertimedelegate.cpp  prayertimedelegate.h  prayertimes.cpp  prayertimes.h  prayertimes.svgz  prayertimesCalculationMethodConfig.ui  prayertimesLocationConfig.ui  prayertimesNotificationsConfig.ui  prayertimesapplet.cpp  prayertimesapplet.h  prayertimesview.cpp  prayertimesview.h
cmake_modules/: FindITL.cmake
dataengine/: CMakeLists.txt  plasma-dataengine-prayertimes.desktop  plasma-engine-prayertimes.cpp  prayertimesengine.cpp  prayertimesengine.h
debian-upstream/: changelog.in  control  copyright  rules
src/: CMakeLists.txt  compassgraphicswidget.cpp  compassgraphicswidget.h  plasma-applet-prayertimes.desktop  prayertimedelegate.cpp  prayertimedelegate.h  prayertimesCalculationMethodConfig.ui  prayertimesLocationConfig.ui  prayertimesNotificationsConfig.ui  prayertimesapplet.cpp  prayertimesapplet.h  prayertimesview.cpp  prayertimesview.h
src/dataengine/: CMakeLists.txt  prayertimesengine.cpp  prayertimesengine.h
